@@ -1,3 +1,7 @@
+2010-01-14  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug: tx_ncstaticfilecache::processDirtyPages() removes entries from diry queue even if the processing did not succeed
+
 2009-08-31  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Method tx_ncstaticfilecache::deleteStaticCacheDirectory() is protected but should be public
